# box_malloc

./: .gitignore  CMakeLists.txt  build.sh  dpkg.sh
cmake/: BoxMallocConfig.cmake.in  BoxmallocConfig.cmake.in  packagex.cmake
debian/: changelog  control  copyright  libbox-malloc2-dev.install  libbox-malloc2.install  libboxmalloc1-dev.install  libboxmalloc1.install  rules
include/: box_malloc.h
include/box_malloc/: box_malloc.h
include/boxmalloc/: boxmalloc.h
src/: box.h  box_malloc.c  boxmalloc.c  lock.h  logutil.h  obj_offset.h  obj_usage.h
test/: 1_box_malloc_simple.c  1_boxmalloc_simple.c  2_box_bench_simple.c  3_box_malloc_max.c  3_boxmalloc_max.c  CMakeLists.txt  box.c  box_bench_simple.c
